--- a/firebase.conf.html
+++ b/firebase.conf.html
@@ -1,3 +1,6 @@
+<html>
+
+<body>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.3.3/firebase-app.js"></script>
 
@@ -21,3 +24,5 @@
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
 </script>
+</body>
+</html>
